# parreq

./: .gitignore  Cargo.toml  LICENSE  README.md  config-sample.yaml
.github/workflows/: release.yaml
src/: batch_executor.rs  batcher.rs  config.rs  lib.rs  login.rs  main.rs  request.rs  ui.rs
src/metrics/: computed_metrics.rs  metrics_layer.rs  metrics_summary.rs  mod.rs  request_metric.rs
